src/objects/Knowledge_Group__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>Affiliation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alex_Update__c</fullName>
        <description>Dont touch!</description>
        <inlineHelpText>Dont touch!</inlineHelpText>
        <label>Alex Update</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apply_Defaults__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Apply Defaults</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel</label>
        <referenceTo>Sales_Channel__c</referenceTo>
        <relationshipLabel>Knowledge Groups</relationshipLabel>
        <relationshipName>Knowledge_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <label>Client Type</label>
        <picklist>
            <picklistValues>
                <fullName>Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simply Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned_Record_ID__c</fullName>
        <label>Cloned Record ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Group_for_Channel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Group for Channel?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Group_for_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Group for Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Group_for_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Group for Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_KG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate KG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Partner__c</referenceTo>
        <relationshipLabel>Knowledge Groups</relationshipLabel>
        <relationshipName>Knowledge_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rally_Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rally Implementation</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipLabel>Knowledge Groups</relationshipLabel>
        <relationshipName>Knowledge_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Show_Live_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Live Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Number__c</fullName>
        <label>Support Number</label>
        <type>Phone</type>
    </fields>
    <label>Knowledge Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Group_Name__c</columns>
        <columns>Affiliation__c</columns>
        <columns>Client__c</columns>
        <columns>Rally_Implementation__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Partner__c</columns>
        <columns>Partner_lookup__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Not_Optum</fullName>
        <columns>NAME</columns>
        <columns>Group_Name__c</columns>
        <columns>Affiliation__c</columns>
        <columns>Channel__c</columns>
        <columns>Partner__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner__c</field>
            <operation>notEqual</operation>
            <value>optum,Optum</value>
        </filters>
        <label>Not Optum</label>
    </listViews>
    <nameField>
        <displayFormat>GR - {00000}</displayFormat>
        <label>Knowledge Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>